Add --enable-native-access=ALL-UNNAMED to runClient JVM args
Suppresses LWJGL restricted-method warning on JDK 25.